added missing resulting pictures for copra and oslom

--- a/Scripts/GCE.ipynb
+++ b/Scripts/GCE.ipynb
@@ -242,7 +242,9 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -257,6 +259,13 @@
    ],
    "source": [
     "plot_graph_for_all_results(all_results, \"school_friendship\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![gce_school](../final_pictures/gce_school_result.png \"GCE School Friendship\")"
    ]
   },
   {
@@ -314,7 +323,9 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -329,6 +340,13 @@
    ],
    "source": [
     "plot_graph_for_all_results(all_results, \"Karate Club\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![gce_karate](../final_pictures/gce_karate.png \"GCE Karate Club\")"
    ]
   },
   {
@@ -453,7 +471,7 @@
    "cell_type": "code",
    "execution_count": 172,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -469,6 +487,13 @@
    ],
    "source": [
     "plot_graph_for_all_results(all_results, \"Football Club\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![gce_football](../final_pictures/gce_football.png \"GCE American Football League\")"
    ]
   },
   {
@@ -523,7 +548,7 @@
    "cell_type": "code",
    "execution_count": 174,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -539,6 +564,13 @@
    ],
    "source": [
     "plot_graph_for_all_results(all_results, \"Politics Book\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![gce_politic_books](../final_pictures/gce_polbooks.png \"GCE Politic Books\")"
    ]
   },
   {
@@ -604,7 +636,7 @@
    "cell_type": "code",
    "execution_count": 200,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -620,6 +652,13 @@
    ],
    "source": [
     "plot_graph_for_all_results(all_results, \"bench_30_network\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![gce_bench_30](../final_pictures/gce_bench_30.png \"GCE bench_30\")"
    ]
   },
   {
@@ -677,7 +716,7 @@
    "cell_type": "code",
    "execution_count": 202,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -693,6 +732,13 @@
    ],
    "source": [
     "plot_graph_for_all_results(all_results, \"bench_30_network\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![gce_bench_40](../final_pictures/gce_bench_40.png \"GCE bench_40\")"
    ]
   },
   {
@@ -750,7 +796,7 @@
    "cell_type": "code",
    "execution_count": 204,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -766,6 +812,13 @@
    ],
    "source": [
     "plot_graph_for_all_results(all_results, \"bench_50_network\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![gce_bench_50](../final_pictures/gce_bench_50.png \"GCE bench_50\")"
    ]
   },
   {
@@ -823,7 +876,7 @@
    "cell_type": "code",
    "execution_count": 206,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -839,6 +892,13 @@
    ],
    "source": [
     "plot_graph_for_all_results(all_results, \"bench_60_network\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![gce_bench_60](../final_pictures/gce_bench_60.png \"GCE bench_60\")"
    ]
   },
   {
@@ -896,7 +956,7 @@
    "cell_type": "code",
    "execution_count": 208,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -915,53 +975,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 190,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GCE_output.txt\r\n"
-     ]
-    }
-   ],
    "source": [
-    "!ls ../Results/GCE_bench_20/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 191,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../datasets/bench_20/truth_network_20.dat\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls ../datasets/bench_20/truth_network_20.dat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 195,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!cat ../Results/GCE_bench_20/GCE_output.txt"
+    "![gce_bench_60_dense](../final_pictures/gce_bench_60_dense.png \"GCE bench_60_dense\")"
    ]
   },
   {
