--- a/Scripts/OSLOM.ipynb
+++ b/Scripts/OSLOM.ipynb
@@ -27,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/latna/aponom/clustering/Scripts\r\n"
+      "/home/latna/aponom/clustering_edited/Scripts\r\n"
      ]
     }
    ],
@@ -248,6 +248,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![oslom_school](../final_pictures/oslom_school_result.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Karate Club ##"
    ]
   },
@@ -301,7 +308,9 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -316,6 +325,13 @@
    ],
    "source": [
     "plot_graph_for_all_results(all_results, \"Karate club\", random_choice='mean')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![oslom_karate](../final_pictures/oslom_karate.png \"Oslom Karate Club\")"
    ]
   },
   {
@@ -449,7 +465,9 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -470,7 +488,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Politics Books ##"
+    "![oslom_football](../final_pictures/oslom_football.png \"Oslom Americal Football League\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Politic Books ##"
    ]
   },
   {
@@ -523,7 +548,9 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -538,6 +565,13 @@
    ],
    "source": [
     "plot_graph_for_all_results(all_results, \"Politic Books\", random_choice='mean')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![oslom_polic_books](../final_pictures/oslom_polbooks.png \"Oslom Politic Books\")"
    ]
   },
   {
@@ -627,6 +661,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![oslom_bench_30](../final_pictures/oslom_bench_30.png \"Oslom bench_30\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## bench_40##"
    ]
   },
@@ -681,7 +722,7 @@
    "cell_type": "code",
    "execution_count": 185,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -697,6 +738,13 @@
    ],
    "source": [
     "plot_graph_for_all_results(all_results, \"bench_40\", random_choice='mean')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![oslom_bench_40](../final_pictures/oslom_bench_40.png \"Oslom bench_40\")"
    ]
   },
   {
@@ -759,7 +807,7 @@
    "cell_type": "code",
    "execution_count": 187,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -775,6 +823,13 @@
    ],
    "source": [
     "plot_graph_for_all_results(all_results, \"bench_50\", random_choice='mean')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![oslom_bench_50](../final_pictures/oslom_bench_50.png \"Oslom bench_50\")"
    ]
   },
   {
@@ -837,7 +892,7 @@
    "cell_type": "code",
    "execution_count": 189,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -853,6 +908,13 @@
    ],
    "source": [
     "plot_graph_for_all_results(all_results, \"bench_60\", random_choice='mean')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![oslom_bench_60](../final_pictures/oslom_bench_60.png \"Oslom bench_60\")"
    ]
   },
   {
@@ -922,7 +984,7 @@
    "cell_type": "code",
    "execution_count": 191,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -938,6 +1000,13 @@
    ],
    "source": [
     "plot_graph_for_all_results(all_results, \"bench_60_dense\", random_choice='mean')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![oslom_bench_60_dense](../final_pictures/oslom_bench_60_dense.png \"Oslom bench_60_dense\")"
    ]
   },
   {
