--- a/Scripts/LPAM-Exact-Amplified-Commute-Distance.ipynb
+++ b/Scripts/LPAM-Exact-Amplified-Commute-Distance.ipynb
@@ -224,7 +224,9 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
