added pictures of line graph for commute distance

--- a/Scripts/LPAM-Exact-Amplified-Commute-Distance.ipynb
+++ b/Scripts/LPAM-Exact-Amplified-Commute-Distance.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "<h1> Link Partitioning by Partioning Around Medoids - Exact </h1>\n",
     "<br/>\n",
-    "Distance function: Amplified Commute Distance"
+    "## Distance function: Amplified Commute Distance ##"
    ]
   },
   {
