removed some fckp from notebook

--- a/Scripts/LPAM-Exact-Amplified-Commute-Distance.ipynb
+++ b/Scripts/LPAM-Exact-Amplified-Commute-Distance.ipynb
@@ -30,26 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[sudo] password for latna: \u001b[33mThe directory '/home/latna/.cache/pip/http' or its parent directory is not owned by the current user and the cache has been disabled. Please check the permissions and owner of that directory. If executing pip with sudo, you may want sudo's -H flag.\u001b[0m\n",
-      "\u001b[33mThe directory '/home/latna/.cache/pip' or its parent directory is not owned by the current user and caching wheels has been disabled. check the permissions and owner of that directory. If executing pip with sudo, you may want sudo's -H flag.\u001b[0m\n",
-      "Collecting Pillow\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/62/94/5430ebaa83f91cc7a9f687ff5238e26164a779cca2ef9903232268b0a318/Pillow-5.3.0-cp36-cp36m-manylinux1_x86_64.whl (2.0MB)\n",
-      "\u001b[K    100% |████████████████████████████████| 2.0MB 4.6MB/s ta 0:00:01\n",
-      "\u001b[?25hInstalling collected packages: Pillow\n",
-      "Successfully installed Pillow-5.3.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import sys\n",
-    "!echo \"p@ssw0rdController33!\" | sudo -S {sys.executable} -m pip install Pillow"
+    "#import sys\n",
+    "#!echo \"mypassword\" | sudo -S {sys.executable} -m pip install Pillow"
    ]
   },
   {
